--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "prettier": "^2.2.1",
-    "uuid": "^8.3.1"
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
